--- a/client/index.html
+++ b/client/index.html
@@ -32,11 +32,103 @@
       </section>
       <section>
         <h2>Form Elements</h2>
-        <div></div>
-      </section>
-      <section>
-        <h2>Form Elements</h2>
-        <div></div>
+        <div class='sub-section'>
+          <h3>Buttons</h3>
+          <div></div>
+        </div>
+        <div class='sub-section'>
+          <h3>Inputs</h3>
+          <div>
+            <div class='input-item'>
+              Button
+              <input type='button' />
+            </div>
+            <div class='input-item'>
+              Checkbox
+              <input type='checkbox' />
+            </div>
+            <div class='input-item'>
+              Color
+              <input type='color' />
+            </div>
+            <div class='input-item'>
+              Date
+              <input type='date' />
+            </div>
+            <div class='input-item'>
+              Date Time Local
+              <input type='datetime-local' />
+            </div>
+            <div class='input-item'>
+              Email
+              <input type='email' />
+            </div>
+            <div class='input-item'>
+              File
+              <input type='file' />
+            </div>
+            <div class='input-item'>
+              Image
+              <input type='image' />
+            </div>
+            <div class='input-item'>
+              Month
+              <input type='month' />
+            </div>
+            <div class='input-item'>
+              Number
+              <input type='number' />
+            </div>
+            <div class='input-item'>
+              Password
+              <input type='password' />
+            </div>
+            <div class='input-item'>
+              Radio
+              <input type='radio' />
+            </div>
+            <div class='input-item'>
+              Range
+              <input type='range' />
+            </div>
+            <div class='input-item'>
+              Reset
+              <input type='reset' />
+            </div>
+            <div class='input-item'>
+              Search
+              <input type='search' />
+            </div>
+            <div class='input-item'>
+              Submit
+              <input type='submit' />
+            </div>
+            <div class='input-item'>
+              Telephone
+              <input type='tel' />
+            </div>
+            <div class='input-item'>
+              Text
+              <input type='text' />
+            </div>
+            <div class='input-item'>
+              Time
+              <input type='time' />
+            </div>
+            <div class='input-item'>
+              URL
+              <input type='url' />
+            </div>
+            <div class='input-item'>
+              Week
+              <input type='week' />
+            </div>
+          </div>
+        </div>
+        <div class='sub-section'>
+          <h3>Labels</h3>
+          <div></div>
+        </div>
       </section>
     </article>
     <footer>&copy; 2017 Mark Scripter</footer>
