--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ScriptStyles Example page</title>
-    <link rel="stylesheet" href="/src/_script.css" />
+    <link rel="stylesheet" href="../lib/script-styles.min.css" />
     <style>
       section {
         margin: 30px 0;
